compiler/plc_source/src/snapshots/plc_source__source_location__tests__span_combined.snap
---
source: compiler/plc_source/src/source_location.rs
expression: loc1.span(&loc2).span(&loc3.span(&loc4))
---
SourceLocation {
    span: Combined(
        [
            Block {
                diagram: "main",
                order: 1,
                pin: None,
            },
            Block {
                diagram: "main",
                order: 2,
                pin: None,
            },
            Block {
                diagram: "main",
                order: 3,
                pin: None,
            },
            Block {
                diagram: "main",
                order: 4,
                pin: None,
            },
        ],
    ),
}
