compiler/plc_source/src/snapshots/plc_source__source_location__tests__span_id_and_range.snap
---
source: compiler/plc_source/src/source_location.rs
expression: loc1.span(&loc2)
---
SourceLocation {
    span: Block {
        local_id: 1,
    },
}
