compiler/plc_source/src/snapshots/plc_source__source_location__tests__span_two_blocks_with_same_id.snap
---
source: compiler/plc_source/src/source_location.rs
expression: loc1.span(&loc2)
---
SourceLocation {
    span: Block {
        diagram: "main",
        order: 1,
        pin: None,
    },
}
