compiler/plc_source/src/snapshots/plc_source__source_location__tests__span_two_ranges.snap
---
source: compiler/plc_source/src/source_location.rs
expression: loc1.span(&loc2)
---
SourceLocation {
    span: Range(1:0 - 5:30),
}
